blender 2.8: Node materials (Materials and World) not updated in viewport #52392

Closed
opened 2017-08-14 09:22:08 +02:00 by Ulysse Martin · 17 comments

System Information
Windows 10 64 GTX 970

Blender Version
Broken: First bad commit: https://developer.blender.org/rBf8bd6adee29d49787299de779f89668ebd8a1bb4

Short description of error
The node materials are not updated in realtime in viewport

Exact steps for others to reproduce the error
tested on windows 32 build 14/08/2017

  • check use nodes on a material and change base color. The color is not updated. I don't know if you can reproduce the bug.
    I built with MSVC 2013, with windows 32 bits libs.

This piece of code http:*pasteall.org/510162/diff (only what is in rna_nodetree.c. The other code is related to another bug I had (https:*developer.blender.org/T52385)) restores the objects and world materials update in viewport on my computer.

**System Information** Windows 10 64 GTX 970 **Blender Version** Broken: First bad commit: https://developer.blender.org/rBf8bd6adee29d49787299de779f89668ebd8a1bb4 **Short description of error** The node materials are not updated in realtime in viewport **Exact steps for others to reproduce the error** tested on windows 32 build 14/08/2017 - check use nodes on a material and change base color. The color is not updated. I don't know if you can reproduce the bug. I built with MSVC 2013, with windows 32 bits libs. This piece of code http:*pasteall.org/510162/diff (only what is in rna_nodetree.c. The other code is related to another bug I had (https:*developer.blender.org/T52385)) restores the objects and world materials update in viewport on my computer.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @you.le

Added subscriber: @you.le
Author

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Please attach a sample file.

Please attach a sample file.
Author

@dfelinto: I tested again with last sources yesterday, still with windows 32 build debug.

This happens only when the file has not been saved then reopened.

The steps are:

  • build last sources (MSVC 2013 win 32 debug mode (didn't tested in release))
  • open blender.exe
  • go in material tab
  • check use nodes
  • try to change base color

For me the display is not updated in realtime. I'll update if I find another fix in a versioning file or something which is run at default file opening.

@dfelinto: I tested again with last sources yesterday, still with windows 32 build debug. This happens only when the file has not been saved then reopened. The steps are: - build last sources (MSVC 2013 win 32 debug mode (didn't tested in release)) - open blender.exe - go in material tab - check use nodes - try to change base color For me the display is not updated in realtime. I'll update if I find another fix in a versioning file or something which is run at default file opening.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Is this still an issue?

Is this still an issue?
Author

Hello, yes, the bug is still in last win32 version from buildbot (254daf8). The steps are the same (open a new blend file, and with the default cube selected, go in material tab, check use nodes and try to change base color -> the color doesn't change on my computer). Same for nodes in world tab. But this is a minor bug

Hello, yes, the bug is still in last win32 version from buildbot (254daf8). The steps are the same (open a new blend file, and with the default cube selected, go in material tab, check use nodes and try to change base color -> the color doesn't change on my computer). Same for nodes in world tab. But this is a minor bug

Attach a blend file

Attach a blend file
Author

@dfelinto : I already said 2 times that the bug happened with the default scene with the default cube when the FILE HAS NOT BEEN SAVED. So I can't attach a blend file

EDIT: Sorry, it's maybe because of my english, I upload a video and update the bug report

@dfelinto : I already said 2 times that the bug happened with the default scene with the default cube when the FILE HAS NOT BEEN SAVED. So I can't attach a blend file EDIT: Sorry, it's maybe because of my english, I upload a video and update the bug report
Author
https://youtu.be/hb-m2h7x2Rk
Dalai Felinto self-assigned this 2017-10-25 13:06:12 +02:00

My bad, just confirmed it. The .blend helps making sure Eevee was used, and there is no other strange thing going on. But yes, problem confirmed, assigning to self.

My bad, just confirmed it. The .blend helps making sure Eevee was used, and there is no other strange thing going on. But yes, problem confirmed, assigning to self.

Note to self: It's only missing to tag depsgraph. e.g., C.depsgraph.debug_tag_update() fixes it.

Note to self: It's only missing to tag depsgraph. e.g., `C.depsgraph.debug_tag_update()` fixes it.

This issue was referenced by 005cb90113

This issue was referenced by 005cb90113361356b040337bf5af503d1f4f34a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks

Thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52392
No description provided.