Fix T52392: Node materials (Materials and World) not updated in viewport

Depsgraph was not updated after you used "Use Nodes" to create the nodetree.